# eagleBlockerTauri

./: package-lock.json  package.json
src/: blockApps.html  blockApps.js  blockWebsites.html  blockWebsites.js  confirmDialog.html  confirmModal.js  delaySettings.html  delaySettings.js  dnsConfirmationModal.html  dnsConfirmationModal.js  index.html  main.js  mainConfig.js  overlayWindow.html  overlayWindow.js  progressBarForDelayChanges.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: browser_detector.rs  main.rs
