[package]
name = "eagleblocker"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "window-all", "shell-open", "dialog"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
winreg = "0.50"
rayon = "1.7"
get_if_addrs = "0.5"
sysinfo = "0.28.4"
windows = { version = "0.58.0", features = [
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_System_Registry",
  "Win32_UI_Input_KeyboardAndMouse",
   "Win32_System_SystemInformation"
] }
runas = "0.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
